# ToyLang

./: .gitignore  CMakeLists.txt  README.md
docs/: next.config.ts  package.json  tailwind.config.ts
docs/app/: globals.css  layout.tsx  page.tsx
docs/app/api/execute/: route.ts
docs/app/download/: page.tsx
docs/components/: CodeBlock.tsx  Footer.tsx  ToyEditor.tsx
docs/lib/: PrismToyLang.ts
docs/public/: ToyLang
extension/toylang/: CHANGELOG.md  README.md  extension.js  icon-theme.json  package.json  toylang-1.0.1.vsix  vsc-extension-quickstart.md
extension/toylang/snippets/: ToyLang.json
extension/toylang/syntaxes/: toy.tmLanguage.json
includes/: evaluator.h  lexer.h  parser.h  symbol.h
installer/: installer.nsi
installer/linux/: install.sh
installer/windows/: installer.nsi
src/: main.cpp
src/evaluator/: evaluator.cpp  evaluator.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h
src/symbol/: symbol.cpp  symbol.h
